--- a/index3.html
+++ b/index3.html
@@ -4,8 +4,26 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-	
+	<header>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-3 logotype">
+					<img src="img/logo.png" alt="Логотип Жалюзи" class="img-responsive">
+				</div>
+				<div class="col-sm-6 text-center descript">
+					<h4>Производство, продажа и установка жалюзи</h4>
+					<h5>в Казани и Республике Татарстан</h5>
+				</div>
+				<div class="col-sm-3 phone_number">
+					<h3><a href="tel:+79999999999">8 (999) 999-99-99</a></h3>
+					<p>Режим работы с 9 <sup>00</sup> до 18 <sup>00</sup></p>
+				</div>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
