--- a/index3.html
+++ b/index3.html
@@ -25,5 +25,31 @@
 			</div>
 		</div>
 	</header>
+	<nav>
+		<div class="container">
+			<div class="row">
+				<ul class="list-inline">
+					<a href="#">
+						<li>Главная</li>
+					</a>
+					<a href="#">
+						<li>Виды жалюзи</li>
+					</a>
+					<a href="#">
+						<li>Наши работы</li>
+					</a>
+					<a href="#">
+						<li>Акция</li>
+					</a>
+					<a href="#">
+						<li>Отзывы</li>
+					</a>
+					<a href="#">
+						<li>Контакты</li>
+					</a>
+				</ul>
+			</div>
+		</div>
+	</nav>
 </body>
 </html>
