--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+	</script>
 </head>
 <body>
 	<header>
@@ -51,5 +52,32 @@
 			</div>
 		</div>
 	</nav>
+	<section id="main">
+		<div class="container">
+			<div class="row">
+				<h1>Установим жалюзи в вашей квартире <br> за 2 часа с полной гарантией <br> и бесплатной доставкой</h1>
+			</div>
+			<div class="row">
+				<h3>Закажите выезд замерщика на дом. <span>Это бесплатно!</span></h3>
+			</div>
+			<div class="row">
+				<button>Вызвать замерщика</button>
+				<button>Выбрать жалюзи</button>
+			</div>
+		</div>
+	<!--<div class="row">
+<div class="col-md-7"><input type="text" placeholder="Как вас зовут?"></div>
+<div class="col-md-5"><input type="text" placeholder="E-mail"></div>                          
+</div>
+<div class="row">
+<div class="col-md-12"><button>Отправить</button></div>
+</div>
+<div class="row">
+<div class="col-md-7"><input type="text" placeholder="Как вас зовут?"></div>
+<div class="col-md-5"><input type="text" placeholder="E-mail"></div>
+<div class="col-md-12"><button>Отправить</button></div>
+</div>-->
+	</section>
+	
 </body>
 </html>
