--- a/index3.html
+++ b/index3.html
@@ -128,18 +128,21 @@
 			</div>
 		</div>
 	</section>	
-	<!--<div class="row">
-<div class="col-md-7"><input type="text" placeholder="Как вас зовут?"></div>
-<div class="col-md-5"><input type="text" placeholder="E-mail"></div>                          
-</div>
-<div class="row">
-<div class="col-md-12"><button>Отправить</button></div>
-</div>
-<div class="row">
-<div class="col-md-7"><input type="text" placeholder="Как вас зовут?"></div>
-<div class="col-md-5"><input type="text" placeholder="E-mail"></div>
-<div class="col-md-12"><button>Отправить</button></div>
-</div>-->
+	<section id="help">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-2">
+					<h3>Не знаете какие жалюзи выбрать?</h3>
+					<br>
+					<p>Оставьте заявку на консультацию и наш специалист подробно ответит <br> на все Ваши вопросы. Это бесплатно.</p>
+					<br>
+					<button data-toggle="modal" href="#">Бесплатная консультация</button>
+				</div>
+				<div class="col-md-2"></div>
+				<img src="img/help_img.jpg" alt="Бесплатная консультация" class="img-responsive center-block">
+			</div>
+		</div>
+	</section>
 	
 
 </body>
