--- a/index3.html
+++ b/index3.html
@@ -143,7 +143,33 @@
 			</div>
 		</div>
 	</section>
-	
+	<section id="portfolio">
+		<div class="container">
+			<div class="row">
+				<div class="section_header text-center">
+					<h2>Наши работы</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="slider">
+					<div class="fotorama">
+						<img src="" alt="" img/portfolio/1.jpg="">
+						<img src="" alt="" img/portfolio/2.jpg="">
+						<img src="" alt="" img/portfolio/3.jpg="">
+						<img src="" alt="" img/portfolio/4.jpg="">
+						<img src="" alt="" img/portfolio/5.jpg="">
+						<img src="" alt="" img/portfolio/6.jpg="">
+						<img src="" alt="" img/portfolio/7.jpg="">
+						<img src="" alt="" img/portfolio/8.jpg="">
+						<img src="" alt="" img/portfolio/9.jpg="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 
 </body>
 </html>
