--- a/index3.html
+++ b/index3.html
@@ -168,6 +168,35 @@
 		</div>
 	</section>
 
+	<sectoin id="offer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-3">
+				<img src="img/gift.jpg" alt="Подарок" class="img-responsive center-block gift">
+				</div>
+				<div class="col-md-9">
+					<h4>Акция</h4>
+					<br>
+					<h3>Закажите установку жалюзи до 29.06.2016</h3>
+					<p>И получите в подарок москитную сетку для окна</p>
+				<div class="row">
+					<div class="col-md-4">
+						<form action="#">
+					<input type="text" required placeholder="Имя..." class="form-control form_input">
+					</div>
+					<div class="col-md-4">
+					<input type="text" required placeholder="Телефон..." class="form-control form_input">
+					</div>
+					<div class="col-md-4">
+					<button type="submit">Заказать жалюзи</button>
+					</form>
+					</div>
+				</div>	
+				</div>
+			</div>
+		</div>
+	</sectoin>
+
 	<link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
 
